# Quicksight-Generator

./: .gitignore  CLAUDE.md  M1a_guidance.md  PLAN-DEMO.md  PLAN.md  PLAN_ARCHIVE.md  Q3_CLI_REDESIGN.md  README.md  RELEASE_NOTES.md  SPEC.md  SPEC_ARCHIVE.md  SPEC_studio.md  biome.jsonc  config.example.yaml  conftest.py  coverage-report.md  deploy.sh  m2_6_verify.sh  main.py  mkdocs.yml  pyproject.toml  run_e2e.sh  run_tests.sh
.githooks/: pre-push
.github/: E2E_SETUP.md
.github/workflows/: ci.yml  e2e.yml  pages.yml  release.yml
demo/: schema.sql
docs/: AR_Walkthroughs.md  Schema_v3.md  Training_Story.md  index.md  x_2_design_thoughts.md  x_4_5_design_thoughts.md
docs/audits/: aa_a_dropdown_audit.md  n_2_inv_exec_audit.md  o_0_content_audit.md  o_help_sheet_design.md  p_2_dialect_catalog.md  x_2_q_e2e_driver_spike.md  x_2_r_event_wait_spike.md  y_2_gate_b_0_runner_lang_spike.md  y_2_gate_m_0_variant_matrix_spike.md  y_2_gate_test_layer_chain_audit.md
docs/handbook/: ar.md  etl.md  pr.md
examples/: config.yaml
quicksight-gen-shim/: pyproject.toml
scripts/: bake_sample_output.py  build_app2_css.py  capture_l1_screenshots.py  dump_top_queries.py  generate_walkthrough_screenshots.py  harness_manual_deploy.py  m2_6_verify.py  p9_deploy_verify.sh  p9_e2e.sh  qs_substitution_probe.py  screenshot_daily_statement.py  screenshot_getting_started.py  spike_x2r_qs_event_capture.py  studio-with-pg-source.sh  sweep_harness_orphans.py  vendor_js_deps.py
spike/y3g/: capture_baseline.py
spike/y6/: measure.py
src/quicksight_gen/: __init__.py  __main__.py  analysis.py  cli.py  cli_legacy.py  config.py  constants.py  datasets.py  demo_data.py  filters.py  main.py  mkdocs.yml  models.py  recon_analysis.py  recon_filters.py  recon_visuals.py  schema.py  schema.sql  theme.py  visuals.py  whitelabel.py
src/recon_gen/: __init__.py  __main__.py  main.py  mkdocs.yml
tests/: _test_helpers.py  conftest.py  test_account_recon.py  test_account_recon_l2_wiring.py  test_app_info.py  test_auto_scenario.py  test_auto_scenario_broad.py  test_cli_seed_l2.py  test_dataset_contract.py  test_dataset_parameters.py  test_demo_data.py  test_demo_etl_examples.py  test_demo_sql.py  test_deploy.py  test_docs_links.py  test_docs_persona_neutral.py  test_drill.py  test_etl_examples.py  test_executives.py  test_export.py  test_generate.py  test_handbook_diagrams.py  test_handbook_vocabulary.py  test_harness_browser.py  test_harness_cleanup.py  test_harness_deploy.py  test_harness_failure_dump.py  test_harness_l1_assertions.py  test_harness_l2ft_assertions.py  test_harness_seed.py  test_investigation.py  test_kitchen_app.py  test_l0_spike.py  test_l1_15_port.py  test_l1_dashboard.py  test_l2_baseline_seed.py  test_l2_datasets.py  test_l2_descriptions.py  test_l2_flow_tracing.py  test_l2_flow_tracing_matrix.py  (+28 more)
tests/audit/: _dashboard_extract.py  _matview_extract.py  _pdf_extract.py  _scenario_expectations.py  test_cli_smoke.py  test_dashboard_extract.py  test_pdf_extract.py  test_pdf_matches_scenario.py  test_pdf_sqlite.py  test_persona_clean.py  test_scenario_expectations.py  test_sql.py  test_template_input.py
tests/cli/: test_dashboards_smoke.py  test_db_fetcher.py
tests/data/: test_auto_scenario.py  test_auto_scenario_broad.py  test_cli_seed_l2.py  test_cli_smoke.py  test_l2_baseline_seed.py  test_l2_baseline_seed_sqlite.py  test_l2_pipeline.py  test_l2_runtime_assertions.py  test_l2_seed_contract.py  test_locked_seeds.py  test_seed_persona_clean.py  test_sqlite_e2e_local_loop.py
tests/docs/: test_cli_export_screenshot.py  test_cli_smoke.py  test_docs_links.py  test_docs_persona_neutral.py  test_docs_theme.py  test_handbook_diagrams.py  test_handbook_vocabulary.py
tests/e2e/: _capture.py  _daily_statement_pick.py  _harness_browser.py  _harness_cleanup.py  _harness_deploy.py  _harness_exec_assertions.py  _harness_failure_dump.py  _harness_html2.py  _harness_inv_assertions.py  _harness_l1_assertions.py  _harness_l2ft_assertions.py  _harness_seed.py  _kitchen_app.py  _layer1_query.py  _picker_anchor.py  _picker_walk.py  _seed_helpers.py  _studio_deploy_helpers.py  browser_helpers.py  conftest.py  screenshot_harness.py  test_ar_cross_sheet_param_hygiene.py  test_ar_cross_visibility.py  test_ar_daily_statement.py  test_ar_dashboard_renders.py  test_ar_dashboard_structure.py  test_ar_dataset_health.py  test_ar_deployed_resources.py  test_ar_drilldown.py  test_ar_filters.py  test_ar_kpi_semantics.py  test_ar_sheet_visuals.py  test_ar_state_toggles.py  test_ar_todays_exc_drill.py  test_audit_dashboard_agreement.py  test_audit_pdf_render_verify.py  test_dashboard_driver.py  test_dashboard_renders.py  test_dashboard_structure.py  test_dataset_health.py  (+49 more)
tests/integration/: verify_dataset_sql.py  verify_demo_apply.py
tests/js/: test_filter_primitives.py  test_render_barchart.py  test_render_kpi.py  test_row_drills.py
tests/json/: test_app_info.py  test_bar_chart_axis_labels.py  test_cleanup.py  test_cli_json.py  test_cli_smoke.py  test_cross_sheet_drill_date_widening.py  test_dataset_contract.py  test_dataset_parameters.py  test_deploy.py  test_drill.py  test_emit_cross_reference_consistency.py  test_executives.py  test_export.py  test_investigation.py  test_kitchen_app.py  test_l1_dashboard.py  test_l2_flow_tracing.py  test_l2_flow_tracing_matrix.py  test_probe.py  test_screenshot_harness.py  test_table_column_headers.py  test_text_box_safety.py
tests/l2/: _kitchen.yaml  fuzz.py  sasquatch_ar.yaml  sasquatch_ar_seed.py  sasquatch_pr.yaml  spec_example.yaml
tests/schema/: test_cli_smoke.py  test_l2_schema.py  test_l2_schema_oracle.py  test_l2_schema_sqlite.py  test_sql_dialect.py
tests/spike/: _l2_spike_findings.md  slice.yaml  test_html_layer2.py  test_slice.py
tests/unit/: test_aa_a_single_value_clauses.py  test_aging.py  test_browser_helpers.py  test_browser_trace_smoke.py  test_cli_no_serve_extra.py  test_clickability.py  test_column_human_name.py  test_common_db.py  test_config_loader.py  test_config_partition.py  test_deploy_pipeline.py  (+70 more)
training/: .gitignore  distribute.py
(+496 files in other folders)
