[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksight-gen"
version = "0.1.0"
description = "Programmatic AWS QuickSight analysis generator for financial reporting"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
demo = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "boto3-stubs[quicksight]>=1.34",
    "psycopg2-binary>=2.9",
]
e2e = [
    "pytest>=7.0",
    "boto3>=1.34",
    "playwright>=1.40",
]

[project.scripts]
quicksight-gen = "quicksight_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring deployed AWS resources",
    "api: API-only e2e tests (no browser)",
    "browser: browser-based e2e tests (requires Playwright)",
]
