[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksight-gen"
dynamic = ["version"]
description = "Programmatic AWS QuickSight analysis generator for financial reporting"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
keywords = [
    "quicksight",
    "aws",
    "dashboards",
    "reconciliation",
    "analytics",
    "finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://chotchki.github.io/Quicksight-Generator/"
Documentation = "https://chotchki.github.io/Quicksight-Generator/"
Source = "https://github.com/chotchki/Quicksight-Generator"
Issues = "https://github.com/chotchki/Quicksight-Generator/issues"
Changelog = "https://github.com/chotchki/Quicksight-Generator/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
demo = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "boto3-stubs[quicksight]>=1.34",
    "psycopg2-binary>=2.9",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
e2e = [
    "pytest>=7.0",
    "pytest-xdist>=3.5",
    "boto3>=1.34",
    "playwright>=1.40",
]

[project.scripts]
quicksight-gen = "quicksight_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quicksight_gen = [
    "schema.sql",
    "docs/**/*.md",
    "docs/**/*.svg",
    "docs/**/*.png",
    "docs/**/*.css",
    "docs/**/*.yaml",
    "docs/**/*.yml",
    "training/**/*.md",
    "training/**/*.py",
    "training/**/*.example",
]

[tool.setuptools.dynamic]
version = {attr = "quicksight_gen.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring deployed AWS resources",
    "api: API-only e2e tests (no browser)",
    "browser: browser-based e2e tests (requires Playwright)",
]
