[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksight-gen"
dynamic = ["version"]
description = "Programmatic AWS QuickSight analysis generator for financial reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "quicksight",
    "aws",
    "dashboards",
    "reconciliation",
    "analytics",
    "finance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "graphviz>=0.20",
]

[project.urls]
Homepage = "https://chotchki.github.io/Quicksight-Generator/"
Documentation = "https://chotchki.github.io/Quicksight-Generator/"
Source = "https://github.com/chotchki/Quicksight-Generator"
Issues = "https://github.com/chotchki/Quicksight-Generator/issues"
Changelog = "https://github.com/chotchki/Quicksight-Generator/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
demo = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "boto3>=1.34",
    "boto3-stubs[quicksight]>=1.34",
    "psycopg2-binary>=2.9",
    "build>=1.0",
    "twine>=5.0",
    "pyright>=1.1.380",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
e2e = [
    "pytest>=7.0",
    "pytest-xdist>=3.5",
    "boto3>=1.34",
    "playwright>=1.40",
]

[project.scripts]
quicksight-gen = "quicksight_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quicksight_gen = [
    "schema.sql",
    "docs/**/*.md",
    "docs/**/*.svg",
    "docs/**/*.png",
    "docs/**/*.css",
    "docs/**/*.yaml",
    "docs/**/*.yml",
    "training/**/*.md",
    "training/**/*.py",
    "training/**/*.example",
]

[tool.setuptools.dynamic]
version = {attr = "quicksight_gen.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring deployed AWS resources",
    "api: API-only e2e tests (no browser)",
    "browser: browser-based e2e tests (requires Playwright)",
]

# Pyright is configured strict on the L.1 tree primitives. Scope stays
# tight for now — tests come in a follow-up sub-step (pytest patterns
# trip a lot of strict rules); apps stay outside until each L.{2,3,4}.13
# cleanup retires the imperative builders. Models + drill helpers are
# reachable through the tree but stay outside strict; pyright still
# resolves them via extraPaths for inference.
[tool.pyright]
include = [
    "src/quicksight_gen/common/tree",
    "src/quicksight_gen/common/l2",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
extraPaths = ["src"]
# Module-private leading-underscore helpers are intentionally shared
# across tree submodules (e.g. `_calc_field_in` in calc_fields.py used
# by filters.py / actions.py). Pyright flags this under `reportPrivateUsage`
# but the codebase treats them as package-internal — suppressing keeps
# the convention without renaming everything to drop the underscore.
reportPrivateUsage = false
